<resources>
    <string name="app_name" translatable="false">WeatherUI</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="version">Version %1$s</string>
    <string name="another">Another</string>

    <string name="cancel">Cancel</string>

    <!-- Weather -->
    <string name="feelsLike">Feels like</string>
    <string name="humidity">Humidity</string>

    <string name="updateLocation">Update Location</string>

    <string name="errorOldLocation">Can\'t get actual location, please click update button</string>
</resources>